--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "strict": true,
-    "target": "ES6"
+    "target": "ES6",
+    "lib": ["ES6"]
   },
   "exclude": ["node_modules"]
 }
